--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bulma": "^0.9.1",
     "gatsby": "^2.24.67",
+    "gatsby-plugin-sass": "^2.3.15",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
