--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bulma": "^0.9.1",
     "gatsby": "^2.24.67",
+    "gatsby-plugin-google-analytics": "^2.3.17",
     "gatsby-plugin-sass": "^2.3.15",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
